and an outdated warning about Apache::SizeLimit. [Marshall]

=item *

Internationalized the JavaScript messages for the Find/Replace dialog box,
although there are currently no translations. [David]

=item *

Added a close icon to the drag bar of the dialog box. This is useful when the
dialog box is bigger than the browser window and the close button therefore is
off-screen. [David]

=back

=head2 Bug Fixes

=over

=item *

Fixed the rarely-used DISABLE_NAV_LAYER bricolage.conf directive. [Scott]

=item *

Fixed warnings in deprecated methods of
L<Bric::Biz::Element::Container|Bric::Biz::Element::Container> so that they
are no longer fatal. Reported by Nate Perry Thistle. [David]

=item *

Fixed reverted media that led to the "Too many Bric::Biz::Element::Container
objects found". It was supposed to have been fixed in 1.10.1, but that fix
unfortunately only fixed stories. Reported by Tom Kjeldsen. [David]

=item *

Fixed the C<subelement_key_name> parameter to the story and media C<list()>
methods. [David]

=item *

Fixed the "Search by Subelement" feature of story search. Thanks to Nate
Perry-Thistle for the spot. [David]

=item *

Fixed highlighting when sorting by Element on desks (bug 1185). Patch from
Brad Harder.

=item *

The "Default Field" select list in Bulk Edit works again. Thanks to Tom
Kjeldsen for uncovering the underlying problem. [David]

=item *

The C<throw_error()> method in L<Bric::Util::Burner|Bric::Util::Burner> works
properly again. Thank to Paul Orrock for the spot and to Scott for revealing
the solution. [David]

=item *

The "Story Type" and "Media Type" options for sorting stories and media,
respectively, on desks and on My Workspace, works again. Reported by Brad
Harder. [David]

=item *

The F<inst/upgrade/1.9.1/xtract_attype2.pl> upgrade script now detects whether
the database has been converted to use boolean columns and casts values moved
from numeric columns accordingly. Reported by Brad Harder. [David]

=item *
