@@ -9,43 +9,37 @@
 <%args>
 $id => undef
 $type => ''
-$object => ''
+$object => undef
 $action
 $section
 </%args>
 
 <%once>
 my $widget = 'asset_meta';
-
-my %types = (
-    'Bric::Biz::Asset::Template'        => 'template',
-    'Bric::Biz::Asset::Business::Story' => 'story',
-    'Bric::Biz::Asset::Business::Media' => 'media'
-);
 </%once>
 
 <%init>
 $id = get_state_data($widget, 'id') unless defined $id;
 if ($object) {
     $id   = $object->get_id;
-    $type = $types{ref $object} || 'story';
+    $type = $object->key_name;
 } elsif ($type && defined $id) {
     if ($type eq 'story') {
-	$object = get_state_data('story_prof', 'story');
-	unless ($object && $object->get_id != $id) {
-	    $object = Bric::Biz::Asset::Business::Story->lookup({ 'id' => $id });
-	}
+        $object = get_state_data('story_prof', 'story');
+        unless ($object && $object->get_id != $id) {
+            $object = Bric::Biz::Asset::Business::Story->lookup({ 'id' => $id });
+        }
     } elsif ($type eq 'template') {
-	$object = get_state_data('tmpl_prof', 'template');
-	unless ($object && $object->get_id != $id) {
-	    $object = Bric::Biz::Asset::Template->lookup({ 'id' => $id });
-	}
+        $object = get_state_data('tmpl_prof', 'template');
+        unless ($object && $object->get_id != $id) {
+            $object = Bric::Biz::Asset::Template->lookup({ 'id' => $id });
+        }
 
     } elsif ($type eq 'media') {
-	$object = get_state_data('media_prof', 'media');
-	unless ($object && $object->get_id != $id) {
-	    $object = Bric::Biz::Asset::Business::Media->lookup({ 'id' => $id });
-	}
+        $object = get_state_data('media_prof', 'media');
+        unless ($object && $object->get_id != $id) {
+            $object = Bric::Biz::Asset::Business::Media->lookup({ 'id' => $id });
+        }
     }
 
     set_state_data($widget, 'id', $id);
